# whisper_api

./: .env.cloudflare  .env.cloudflare.example  .gitignore  CLOUDFLARE_SETUP.md  CURL_COMMANDS.md  Dockerfile  README.md  cloudflared-config.yml  cloudflared.yml  deploy.sh  docker-compose.cloudflare.yml  docker-compose.gpu.yml  docker-compose.yml  download_models.py  download_models.sh  examples.md  manage.sh  nginx.conf  pyproject.toml  quick_test.sh  requirements.txt  setup-cloudflare.sh  start-cloudflare.sh  start-tunnel.sh  start_api.sh  start_server.sh  test_api.py  test_api.sh  test_container.sh  test_server.sh
.github/: copilot-instructions.md
app/: config.py  main.py  models.py  whisper_service.py
tests/: test_main.py
